--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="E:/Workspaces/15/yinshu/web/WEB-INF/lib/ibatis-2.3.2.715.jar"/>
+	<classpathentry kind="lib" path="E:/Workspaces/15/yinshu/web/WEB-INF/lib/mysql-connector-java-5.1.11-bin.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
