--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java-version>1.7</java-version>
 		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
@@ -31,6 +32,22 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.28</version>
 		</dependency>
+		<!-- ibatis -->
+		<dependency>
+			 <groupId>org.apache.servicemix.bundles</groupId>
+        	 <artifactId>org.apache.servicemix.bundles.ibatis-sqlmap</artifactId>
+        	 <version>2.3.4.726_4</version>
+		</dependency>
+		<dependency>
+	<groupId>org.apache.ibatis</groupId>
+	<artifactId>ibatis-sqlmap</artifactId>
+	<version>2.3.4.726</version>
+</dependency>
+<!-- 		<dependency>   -->
+<!--             <groupId>com.ibatis</groupId>   -->
+<!--             <artifactId>ibatis-sqlmap</artifactId>   -->
+<!--             <version>2.1.0.565</version>   -->
+<!--         </dependency>   -->
 		<!-- <dependency> -->
 		<!-- <groupId>junit</groupId> -->
 		<!-- <artifactId>junit</artifactId> -->
@@ -227,7 +244,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<!-- <defaultGoal>compile</defaultGoal> -->
+		<defaultGoal>compile</defaultGoal>
 		<plugins>
 			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
