--- a/src/main/java/conf/db.properties
+++ b/src/main/java/conf/db.properties
@@ -1,7 +1,7 @@
 jdbc.user=root
 jdbc.password=123456
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql:///spring
+jdbc.jdbcUrl=dbc:mysql://127.0.0.1:3306/onewolfmanager?useUnicode=true&amp;characterEncoding=utf8
 
 jdbc.initPoolSize=5
 jdbc.maxPoolSize=10
